--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@ionic-native/splash-screen": "~4.11.0",
     "@ionic-native/status-bar": "~4.11.0",
     "@ionic/storage": "2.1.3",
+    "glob": "^7.1.2",
+    "hoek": "^4.2.1",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
