--- a/package.json
+++ b/package.json
@@ -24,11 +24,15 @@
     "@ionic-native/splash-screen": "~4.11.0",
     "@ionic-native/status-bar": "~4.11.0",
     "@ionic/storage": "2.1.3",
+    "angularfire2": "^5.0.0-rc.11",
+    "firebase": "^5.4.0",
     "glob": "^7.1.2",
     "hoek": "^4.2.1",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
-    "rxjs": "5.5.11",
+    "promise-polyfill": "^8.1.0",
+    "rxjs": "^6.2.2",
+    "rxjs-compat": "^6.2.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
   },
